<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <EditText
        android:id="@+id/noteHeadingEditText"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/noteheading" />

    <EditText
        android:id="@+id/noteDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/notedetails"
        android:gravity="top" />

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Savenote" />

</LinearLayout>