<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"
    tools:context=".MainActivity">


    <!-- Title -->
    <TextView
        android:id="@+id/terms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback"
        android:layout_centerHorizontal="true"
        android:textColor="#0F9D58"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>


    <!-- TextView for label: "Send To:" -->


    <!-- TextView for label: "Email Subject:" -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/Subject"
        android:textColor="#0F9D58"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- EditText for email subject -->
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="16dp"
        android:hint="@string/EnterSubject"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textSize="14sp"/>

    <!-- TextView for label: "Email Body:" -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:text="@string/Body"
        android:textColor="#0F9D58"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- EditText for email body -->
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/textView3"
        android:layout_marginBottom="16dp"
        android:hint="@string/Emailbody"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textSize="14sp"
        android:scrollbars="vertical"/>

    <!-- Button to send email -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:text="@string/Send"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
