<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/aboutid"
    >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/animal10"

            android:contentDescription="App Logo" />

        <!-- App Name -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/coyotefilelocker"
            android:textColor="#0F9D58"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- App Description -->
        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/appDescription"
            android:textSize="16sp"
            android:gravity="center" />

        <!-- App Version -->
        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Version: 1.0.0"

            android:textSize="14sp"
            android:gravity="center" />

        <!-- Developer Info -->
        <TextView
            android:id="@+id/developer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/madeWithLove"
            android:textColor="#0F9D58"
            android:textSize="14sp"
            android:gravity="center" />



    </LinearLayout>
</ScrollView>
</LinearLayout>